Fix content collapse when height is reduced

--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,15 @@
     margin:0;
     padding:0;
 }
-html, body {
+html {
+    height:100%;
+    overflow-y:visible;
+}
+ body {
     height:100%;
 }
 .content {
-    height:100%;
+    min-height:100%;
     width:100%;
     display:grid; 
     grid-template-rows:minmax(75px,1fr) minmax(200px, 8fr) minmax(75px,1fr);
